# anki-bot

./: .gitignore  README.md  config.toml  pyproject.toml  requirements.txt
ankibot/: __main__.py  bot.py  errors.py  language_utils.py
ankibot/dictionary/: cambridge.py  dictionary.py  word_definition.py
